Footer fix with css that content cannot go behind it. Remove close button from messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,10 @@
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+}
+
 .lato {
     font-family: 'Lato', sans-serif;
 }
